bugfix right arrow